# GGJ24

./: CMakeLists.txt  main.cpp
